# miniharness

./: .env.example  .gitignore  MINIHARNESS.md  README.md  README.zh-CN.md  hhh.md  pyproject.toml  transformer_from_scratch.py
.miniharness/: mcp.json
docs/: AGENT_RESOURCES.md  ARCHITECTURE.md
src/miniharness/: __init__.py  __main__.py  cli.py  display.py  llm.py  loop.py  messages.py  permissions.py  providers.py  tool_registry.py
src/miniharness/api/: anthropic_client.py
src/miniharness/commands/: __init__.py  builtin.py  registry.py  types.py
src/miniharness/config/: __init__.py  paths.py  settings.py
src/miniharness/context/: __init__.py  budget.py  carryover.py  compactor.py  compiler.py  working_set.py
src/miniharness/coordinator/: __init__.py  agent_definitions.py  prompt.py
src/miniharness/hooks/: __init__.py  audit.py  events.py  executor.py  presets.py  registry.py  schemas.py  types.py
src/miniharness/mcp/: __init__.py  auth_tool.py  client.py  config.py  resource_tools.py  tool_adapter.py  types.py
src/miniharness/memory/: __init__.py  base.py  core.py  episodic.py  semantic.py  store.py
src/miniharness/plugins/: __init__.py  gating.py  loader.py  (+3 more)
tests/: test_agent_definitions.py  test_background_tasks.py  test_coordinator_drain.py  test_hooks.py  test_llm_dashscope.py  test_mcp_security.py  test_memory.py  test_memory_extraction.py  test_messages.py  test_permissions.py  test_plugins.py  test_runtime_events.py  test_sandbox.py  test_session_memory.py  test_session_storage.py  test_skills.py  test_state.py  test_swarm_permission_sync.py  test_tasks.py  test_token_estimation.py  test_tool_registry.py  test_ui_runtime.py
(+75 files in other folders)
