[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miniharness"
version = "0.1.0"
description = "A teaching-first mini coding agent harness."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.2",
    "rich>=13.0.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[project.scripts]
miniharness = "miniharness.cli:app"
mh = "miniharness.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/miniharness"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
